# hermes-auditor

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  eval_brain.py  pyproject.toml
docs/: demo-evidence.md  demo-script.md  langgraph-skeleton.md  recording-runbook.md
fixtures/plan-sources/: allow.json  conflict.json  marketplace.json  procurement.json  reject.json
fixtures/risk-summary/: allow-normal-payment.json  reject-wrong-recipient.json
schemas/: risk-summary.schema.json
scripts/: demo-transfer.sh  record-attack.sh  record-hero.sh
src/hermes_auditor/: __init__.py  caw.py  fixtures_io.py  graph.py  nodes.py  run_tracer.py  state.py
src/hermes_auditor/plan/: __init__.py  agents.py  discovery.py  llm.py  pipeline.py  run_plan.py  types.py  websearch.py
